--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Chen | Quantum & Cloud Computing</title>
+    <title>Rishiraj Rathore | Portfolio</title>
     <style>
         :root {
             --bg-dark: #121420;
@@ -51,13 +51,13 @@
             -webkit-text-fill-color: transparent;
             margin-bottom: 1rem;
         }
-        .tech-grid {
+        .skills-grid, .tech-grid, .projects-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
             margin-top: 3rem;
         }
-        .tech-card {
+        .skill-card, .tech-card, .project-card {
             background: var(--card-bg);
             border-radius: 10px;
             padding: 25px;
@@ -65,33 +65,28 @@
             border: 1px solid rgba(255,255,255,0.1);
             transition: transform 0.3s ease;
         }
-        .tech-card:hover {
+        .skill-card:hover, .tech-card:hover, .project-card:hover {
             transform: translateY(-10px);
             border-color: var(--accent-blue);
         }
-        .tech-card h3 {
+        .skill-card h3, .tech-card h3, .project-card h3 {
             color: var(--accent-green);
             margin-bottom: 15px;
         }
-        .quantum-compute {
-            display: flex;
-            align-items: center;
-            margin-top: 4rem;
+        footer {
             background: var(--card-bg);
-            padding: 30px;
-            border-radius: 15px;
+            padding: 2rem 0;
+            text-align: center;
+            margin-top: 3rem;
         }
-        .quantum-compute img {
-            max-width: 200px;
-            margin-right: 30px;
+        footer .social-links a {
+            color: var(--text-primary);
+            margin: 0 15px;
+            text-decoration: none;
         }
         @media (max-width: 768px) {
             .hero h1 {
                 font-size: 2.5rem;
-            }
-            .quantum-compute {
-                flex-direction: column;
-                text-align: center;
             }
         }
     </style>
@@ -99,44 +94,73 @@
 <body>
     <div class="container">
         <header>
-            <div>Alex Chen</div>
-            <nav>Quantum & Cloud Computing Specialist</nav>
+            <div>Rishiraj Rathore</div>
+            <nav>Software Developer</nav>
         </header>
 
         <section class="hero">
             <div class="hero-content">
-                <h1>Bridging Quantum Horizons</h1>
-                <p>Innovating at the intersection of quantum computing, cloud architectures, and artificial intelligence.</p>
+                <h1>Bridging Digital Horizons</h1>
+                <p>Innovating at the intersection of robust web applications</p>
             </div>
         </section>
 
-        <section class="tech-grid">
-            <div class="tech-card">
-                <h3>Quantum Algorithm Design</h3>
-                <p>Developing advanced quantum algorithms for complex computational challenges.</p>
-            </div>
-            <div class="tech-card">
-                <h3>Cloud Native Solutions</h3>
-                <p>Architecting scalable microservices and distributed computing ecosystems.</p>
-            </div>
-            <div class="tech-card">
-                <h3>AI & Machine Learning</h3>
-                <p>Implementing cutting-edge neural networks and predictive models.</p>
+        <section id="skills">
+            <h2>Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <h3>HTML</h3>
+                    <p>Advanced web structure and semantic markup</p>
+                </div>
+                <div class="skill-card">
+                    <h3>CSS</h3>
+                    <p>Responsive design and modern styling techniques</p>
+                </div>
+                <div class="skill-card">
+                    <h3>JavaScript</h3>
+                    <p>Dynamic and interactive web programming</p>
+                </div>
+                <div class="skill-card">
+                    <h3>C</h3>
+                    <p>System-level programming and algorithmic solutions</p>
+                </div>
+                <div class="skill-card">
+                    <h3>C++</h3>
+                    <p>Object-oriented programming and performance optimization</p>
+                </div>
             </div>
         </section>
 
-        <section class="quantum-compute">
-            <img src="/api/placeholder/200/200" alt="Quantum Computing">
-            <div>
-                <h2>Quantum Computing Research</h2>
-                <p>Exploring quantum supremacy, error correction, and next-generation computational paradigms.</p>
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <h3>Project 1</h3>
+                    <p>To be uploaded soon</p>
+                </div>
+                <div class="project-card">
+                    <h3>Project 2</h3>
+                    <p>To be uploaded soon</p>
+                </div>
+                <div class="project-card">
+                    <h3>Project 3</h3>
+                    <p>To be uploaded soon</p>
+                </div>
             </div>
         </section>
     </div>
 
+    <footer>
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/rishiraj-rathore-276927252">LinkedIn</a>
+            <a href="https://github.com/Rishiraj700">GitHub</a>
+            <a href="rishirajrathore121@gmail.com">Email</a>
+        </div>
+        <p>&copy; 2024 Rishiraj Rathore. All rights reserved.</p>
+    </footer>
+
     <script>
-        // Future-ready placeholder for interactive elements
-        console.log("Quantum possibilities loading...");
+        console.log("Portfolio loading...");
     </script>
 </body>
 </html>
